spell gap fixed

--- a/ADnD_1E_Revised/1ESheet.css
+++ b/ADnD_1E_Revised/1ESheet.css
@@ -1370,10 +1370,10 @@ summary::-webkit-details-marker {
 }
 
 .charsheet .repcontainer[data-groupname="repeating_weapon"] .repitem,
-.charsheet .repcontainer[data-groupname="repeating_equipment"] .repitem,
+.charsheet .repcontainer[data-groupname="repeating_equipment"] .repitem:has(input.toggle-carry[value="1"]),
 .charsheet .repcontainer[data-groupname="repeating_ability"] .repitem,
 .charsheet .repcontainer[data-groupname="repeating_nonweaponproficiencies"] .repitem,
-.charsheet .repcontainer[data-groupname="repeating_spells"] .repitem,
+.charsheet .repcontainer[data-groupname="repeating_spells"] .repitem:has(input.toggle-show[value="1"]),
 .charsheet .repcontainer[data-groupname="repeating_notes"] .repitem {
     margin-block: 1px;
 }
